modify site-spread regularization to pass test
Changes calculation of analytical gradient for site-spread regularization to pass test.

Also updates test in `test_gradients.ipynb` to test on fit as well as non-fit values.

--- a/notebooks/optimization.ipynb
+++ b/notebooks/optimization.ipynb
@@ -164,7 +164,7 @@
    "metadata": {},
    "source": [
     "#### Calculating $\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}}$\n",
-    "$$\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}} = \\frac{2\\lambda_{\\rm{spread}}}{M_i} \\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)\\frac{M_i - 1}{M_i}$$"
+    "$$\\frac{\\partial R_{\\rm{spread}}}{\\partial \\beta_{m,e}} = \\frac{2\\lambda_{\\rm{spread}}}{M_i} \\left(\\beta_{m,e} - \\frac{1}{M_i} \\sum_{m' \\in i} \\beta_{m',e}\\right)$$"
    ]
   }
  ],
