--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -41,7 +41,18 @@
     "\n",
     "mut_escape_df = pd.DataFrame(\n",
     "    {\n",
-    "        \"mutation\": [\"M1C\", \"M1C\", \"G2A\", \"G2A\", \"A4K\", \"A4K\", \"A4L\", \"A4L\", \"A4Q\", \"A4Q\"],\n",
+    "        \"mutation\": [\n",
+    "            \"M1C\",\n",
+    "            \"M1C\",\n",
+    "            \"G2A\",\n",
+    "            \"G2A\",\n",
+    "            \"A4K\",\n",
+    "            \"A4K\",\n",
+    "            \"A4L\",\n",
+    "            \"A4L\",\n",
+    "            \"A4Q\",\n",
+    "            \"A4Q\",\n",
+    "        ],\n",
     "        \"epitope\": [\"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\"],\n",
     "        \"escape\": [2.0, 0.0, 3.0, 0.0, 0.0, 2.5, 0.0, 1.5, 0.0, 3.5],\n",
     "    }\n",
@@ -79,7 +90,7 @@
     "\n",
     "models = {}\n",
     "\n",
-    "models['same variants all concentration, not fit'] = Polyclonal(\n",
+    "models[\"same variants all concentration, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit,\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
@@ -90,7 +101,7 @@
     ")\n",
     "\n",
     "# second model doesn't have the same mutations for all concentrations\n",
-    "models['different variants among concentrations, not fit'] = Polyclonal(\n",
+    "models[\"different variants among concentrations, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit.head(len(data_to_fit) - 1),\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
@@ -102,7 +113,7 @@
     "\n",
     "# fit models\n",
     "for name, model in list(models.items()):\n",
-    "    fit_name = name.replace('not fit', 'fit')\n",
+    "    fit_name = name.replace(\"not fit\", \"fit\")\n",
     "    models[fit_name] = copy.deepcopy(model)\n",
     "    _ = models[fit_name].fit()"
    ]
