--- a/tests/test_gradients.ipynb
+++ b/tests/test_gradients.ipynb
@@ -7,10 +7,10 @@
    "source": [
     "# Test analytical gradients\n",
     "\n",
-    "Set up a toy example, with two different `Polyclonal` objects:\n",
-    " - one with same variants for each concentration\n",
-    " - one with different variants for each concentration\n",
-    "We do both because handled slightly differently internally in `Polyclonal`."
+    "Set up a toy example, with four different `Polyclonal` objects:\n",
+    " - one with same variants for each concentration, and same with values fit\n",
+    " - one with different variants for each concentration, and same with values fit\n",
+    "We do all these because handled slightly differently internally in `Polyclonal`."
    ]
   },
   {
@@ -19,16 +19,18 @@
    "id": "4cee1ee4-1629-4310-9f65-42e54504f755",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-17T20:44:22.749506Z",
-     "iopub.status.busy": "2021-11-17T20:44:22.749196Z",
-     "iopub.status.idle": "2021-11-17T20:44:24.139553Z",
-     "shell.execute_reply": "2021-11-17T20:44:24.138923Z",
-     "shell.execute_reply.started": "2021-11-17T20:44:22.749442Z"
+     "iopub.execute_input": "2021-12-31T20:05:29.252123Z",
+     "iopub.status.busy": "2021-12-31T20:05:29.251757Z",
+     "iopub.status.idle": "2021-12-31T20:05:31.395537Z",
+     "shell.execute_reply": "2021-12-31T20:05:31.394451Z",
+     "shell.execute_reply.started": "2021-12-31T20:05:29.252037Z"
     },
     "tags": []
    },
    "outputs": [],
    "source": [
+    "import copy\n",
+    "\n",
     "import numpy\n",
     "\n",
     "import pandas as pd\n",
@@ -39,9 +41,20 @@
     "\n",
     "mut_escape_df = pd.DataFrame(\n",
     "    {\n",
-    "        \"mutation\": [\"M1C\", \"M1C\", \"G2A\", \"G2A\", \"A4K\", \"A4K\", \"A4L\", \"A4L\"],\n",
-    "        \"epitope\": [\"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\"],\n",
-    "        \"escape\": [2.0, 0.0, 3.0, 0.0, 0.0, 2.5, 0.0, 1.5],\n",
+    "        \"mutation\": [\n",
+    "            \"M1C\",\n",
+    "            \"M1C\",\n",
+    "            \"G2A\",\n",
+    "            \"G2A\",\n",
+    "            \"A4K\",\n",
+    "            \"A4K\",\n",
+    "            \"A4L\",\n",
+    "            \"A4L\",\n",
+    "            \"A4Q\",\n",
+    "            \"A4Q\",\n",
+    "        ],\n",
+    "        \"epitope\": [\"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\", \"e1\", \"e2\"],\n",
+    "        \"escape\": [2.0, 0.0, 3.0, 0.0, 0.0, 2.5, 0.0, 1.5, 0.0, 3.5],\n",
     "    }\n",
     ")\n",
     "\n",
@@ -54,13 +67,17 @@
     "        (\"AG\", \"G2A\"),\n",
     "        (\"AT\", \"A4K\"),\n",
     "        (\"TA\", \"A4L\"),\n",
+    "        (\"GA\", \"A4Q\"),\n",
     "        (\"CA\", \"M1C G2A\"),\n",
     "        (\"CG\", \"M1C A4K\"),\n",
+    "        (\"TT\", \"M1C A4L\"),\n",
+    "        (\"GT\", \"M1C A4Q\"),\n",
     "        (\"CC\", \"G2A A4K\"),\n",
     "        (\"TC\", \"G2A A4L\"),\n",
+    "        (\"GG\", \"G2A A4Q\"),\n",
     "        (\"CT\", \"M1C G2A A4K\"),\n",
     "        (\"TG\", \"M1C G2A A4L\"),\n",
-    "        (\"GA\", \"M1C\"),\n",
+    "        (\"GA\", \"M1C G2A A4Q\"),\n",
     "    ],\n",
     "    columns=[\"barcode\", \"aa_substitutions\"],\n",
     ")\n",
@@ -71,7 +88,9 @@
     "\n",
     "data_to_fit = escape_probs.rename(columns={\"predicted_prob_escape\": \"prob_escape\"})\n",
     "\n",
-    "polyclonal_data = Polyclonal(\n",
+    "models = {}\n",
+    "\n",
+    "models[\"same variants all concentration, not fit\"] = Polyclonal(\n",
     "    data_to_fit=data_to_fit,\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
@@ -82,15 +101,21 @@
     ")\n",
     "\n",
     "# second model doesn't have the same mutations for all concentrations\n",
-    "polyclonal_data2 = Polyclonal(\n",
-    "    data_to_fit=data_to_fit.head(30),\n",
+    "models[\"different variants among concentrations, not fit\"] = Polyclonal(\n",
+    "    data_to_fit=data_to_fit.head(len(data_to_fit) - 1),\n",
     "    activity_wt_df=activity_wt_df,\n",
     "    site_escape_df=pd.DataFrame.from_records(\n",
     "        [(\"e1\", 1, 1.0), (\"e1\", 4, 0.0), (\"e2\", 1, 0.0), (\"e2\", 4, 2.0)],\n",
     "        columns=[\"epitope\", \"site\", \"escape\"],\n",
     "    ),\n",
     "    data_mut_escape_overlap=\"fill_to_data\",\n",
-    ")"
+    ")\n",
+    "\n",
+    "# fit models\n",
+    "for name, model in list(models.items()):\n",
+    "    fit_name = name.replace(\"not fit\", \"fit\")\n",
+    "    models[fit_name] = copy.deepcopy(model)\n",
+    "    _ = models[fit_name].fit()"
    ]
   },
   {
@@ -107,11 +132,11 @@
    "id": "80de92ae-ef0b-4216-8884-f1b2f8a8106c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-17T20:44:24.140560Z",
-     "iopub.status.busy": "2021-11-17T20:44:24.140396Z",
-     "iopub.status.idle": "2021-11-17T20:44:24.157361Z",
-     "shell.execute_reply": "2021-11-17T20:44:24.156835Z",
-     "shell.execute_reply.started": "2021-11-17T20:44:24.140541Z"
+     "iopub.execute_input": "2021-12-31T20:05:31.399056Z",
+     "iopub.status.busy": "2021-12-31T20:05:31.398897Z",
+     "iopub.status.idle": "2021-12-31T20:05:31.428300Z",
+     "shell.execute_reply": "2021-12-31T20:05:31.427616Z",
+     "shell.execute_reply.started": "2021-12-31T20:05:31.399034Z"
     },
     "tags": []
    },
@@ -120,9 +145,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0\n",
+      "\n",
+      "Model: same variants all concentration, not fit\n",
       "All gradients check\n",
-      "Model 1\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
       "All gradients check\n"
      ]
     }
@@ -130,9 +163,9 @@
    "source": [
     "eps = 1e-8\n",
     "\n",
-    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "for name, model in models.items():\n",
     "\n",
-    "    print(f\"Model {i}\")\n",
+    "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
     "    p_vc, dpvc_dparams = model._compute_1d_pvs(\n",
@@ -158,7 +191,7 @@
     "        analytical_grad = dpvc_dparams[iparam].toarray()\n",
     "        diff = numpy.sqrt(((numerical_grad - analytical_grad) ** 2).sum())\n",
     "        mag = numpy.sqrt((analytical_grad ** 2).sum())\n",
-    "        if (diff > 1e-7) or (diff / mag > 1e-7):\n",
+    "        if (diff > 1e-7) or (diff / mag > 1e-3):\n",
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
     "            )\n",
@@ -179,11 +212,11 @@
    "id": "4cd10913-d096-457f-9dff-af8385c7ddeb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-17T20:44:24.158377Z",
-     "iopub.status.busy": "2021-11-17T20:44:24.158120Z",
-     "iopub.status.idle": "2021-11-17T20:44:24.204942Z",
-     "shell.execute_reply": "2021-11-17T20:44:24.204375Z",
-     "shell.execute_reply.started": "2021-11-17T20:44:24.158358Z"
+     "iopub.execute_input": "2021-12-31T20:05:31.432591Z",
+     "iopub.status.busy": "2021-12-31T20:05:31.432338Z",
+     "iopub.status.idle": "2021-12-31T20:05:31.532946Z",
+     "shell.execute_reply": "2021-12-31T20:05:31.532285Z",
+     "shell.execute_reply.started": "2021-12-31T20:05:31.432568Z"
     },
     "tags": []
    },
@@ -192,9 +225,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0\n",
+      "\n",
+      "Model: same variants all concentration, not fit\n",
       "All gradients check\n",
-      "Model 1\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
       "All gradients check\n"
      ]
     }
@@ -204,9 +245,9 @@
     "\n",
     "delta = 2\n",
     "\n",
-    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "for name, model in models.items():\n",
     "\n",
-    "    print(f\"Model {i}\")\n",
+    "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
     "    loss, dloss = model._loss_dloss(params=model._params, delta=2)\n",
@@ -219,13 +260,8 @@
     "        numerical_grad = (loss_eps - loss) / eps\n",
     "        analytical_grad = dloss[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
-<<<<<<< HEAD
     "        mag = numpy.sqrt(analytical_grad**2)\n",
     "        if (diff > 1e-7) or (diff / mag > 1e-3):\n",
-=======
-    "        mag = numpy.sqrt(analytical_grad ** 2)\n",
-    "        if (diff > 1e-7) or (diff / mag > 1e-6):\n",
->>>>>>> Adding a gradient test in notebook for a bigger data set
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
     "            )\n",
@@ -247,11 +283,11 @@
    "id": "e6c5bbed-2dde-44bf-9375-ee4b31d673cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-17T20:44:24.205952Z",
-     "iopub.status.busy": "2021-11-17T20:44:24.205710Z",
-     "iopub.status.idle": "2021-11-17T20:44:24.212345Z",
-     "shell.execute_reply": "2021-11-17T20:44:24.211876Z",
-     "shell.execute_reply.started": "2021-11-17T20:44:24.205931Z"
+     "iopub.execute_input": "2021-12-31T20:05:31.536080Z",
+     "iopub.status.busy": "2021-12-31T20:05:31.535856Z",
+     "iopub.status.idle": "2021-12-31T20:05:31.544610Z",
+     "shell.execute_reply": "2021-12-31T20:05:31.544011Z",
+     "shell.execute_reply.started": "2021-12-31T20:05:31.536060Z"
     },
     "tags": []
    },
@@ -260,9 +296,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0\n",
+      "\n",
+      "Model: same variants all concentration, not fit\n",
       "All gradients check\n",
-      "Model 1\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
       "All gradients check\n"
      ]
     }
@@ -270,9 +314,9 @@
    "source": [
     "eps = 1e-7\n",
     "\n",
-    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "for name, model in models.items():\n",
     "\n",
-    "    print(f\"Model {i}\")\n",
+    "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
     "    reg, dreg = model._reg_escape(params=model._params, weight=0.2, delta=0.5)\n",
@@ -289,13 +333,8 @@
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
-<<<<<<< HEAD
     "        mag = numpy.sqrt(analytical_grad**2)\n",
-    "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-3):\n",
-=======
-    "        mag = numpy.sqrt(analytical_grad ** 2)\n",
     "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-6):\n",
->>>>>>> Adding a gradient test in notebook for a bigger data set
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\" f\"{analytical_grad=}\\n{numerical_grad=}\"\n",
     "            )\n",
@@ -317,11 +356,11 @@
    "id": "89650449-2a91-437a-956f-661a4ece7573",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-17T20:44:24.213225Z",
-     "iopub.status.busy": "2021-11-17T20:44:24.213027Z",
-     "iopub.status.idle": "2021-11-17T20:44:24.222497Z",
-     "shell.execute_reply": "2021-11-17T20:44:24.222006Z",
-     "shell.execute_reply.started": "2021-11-17T20:44:24.213206Z"
+     "iopub.execute_input": "2021-12-31T20:05:31.547370Z",
+     "iopub.status.busy": "2021-12-31T20:05:31.547221Z",
+     "iopub.status.idle": "2021-12-31T20:05:31.562005Z",
+     "shell.execute_reply": "2021-12-31T20:05:31.561382Z",
+     "shell.execute_reply.started": "2021-12-31T20:05:31.547349Z"
     },
     "tags": []
    },
@@ -330,9 +369,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model 0\n",
+      "\n",
+      "Model: same variants all concentration, not fit\n",
       "All gradients check\n",
-      "Model 1\n",
+      "\n",
+      "Model: different variants among concentrations, not fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: same variants all concentration, fit\n",
+      "All gradients check\n",
+      "\n",
+      "Model: different variants among concentrations, fit\n",
       "All gradients check\n"
      ]
     }
@@ -340,9 +387,9 @@
    "source": [
     "eps = 1e-7\n",
     "\n",
-    "for i, model in enumerate([polyclonal_data, polyclonal_data2]):\n",
+    "for name, model in models.items():\n",
     "\n",
-    "    print(f\"Model {i}\")\n",
+    "    print(f\"\\nModel: {name}\")\n",
     "\n",
     "    # analytical\n",
     "    reg, dreg = model._reg_spread(\n",
@@ -361,13 +408,8 @@
     "        numerical_grad = (reg_eps - reg) / eps\n",
     "        analytical_grad = dreg[iparam]\n",
     "        diff = numpy.sqrt((numerical_grad - analytical_grad) ** 2)\n",
-<<<<<<< HEAD
-    "        mag = numpy.sqrt(analytical_grad**2)\n",
-    "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-3):\n",
-=======
     "        mag = numpy.sqrt(analytical_grad ** 2)\n",
     "        if (diff > 1e-7) or (mag > 0 and diff / mag > 1e-6):\n",
->>>>>>> Adding a gradient test in notebook for a bigger data set
     "            raise ValueError(\n",
     "                f\"{iparam=}, {diff=}, {mag=}\\n\"\n",
     "                f\"{analytical_grad=}\\n{numerical_grad=}\\n\"\n",
@@ -375,14 +417,6 @@
     "\n",
     "    print(\"All gradients check\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6d54542-1d80-45e4-9330-90c6f841ef53",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
