--- a/tests/test_bootstrap.ipynb
+++ b/tests/test_bootstrap.ipynb
@@ -2,301 +2,197 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "58996f88-bdcd-4e58-a6e6-5cf53e7dc0ed",
+   "id": "1aa90605-cff5-49e8-bd63-106e9efc69fc",
    "metadata": {},
    "source": [
-    "# Test bootstrapping functions"
+    "# Notebook for getting started with `polyclonal` bootstrapping"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c5197eb5-8c6b-4b95-83a5-b4dc21e74f5f",
+   "id": "7f2bd96d-b693-4a82-856c-edf6a85ec89a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import polyclonal.bootstrap as boot"
+    "from polyclonal import Polyclonal, PolyclonalCollection\n",
+    "import polyclonal.bootstrap as boot\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "fa8902a4-12d7-4f46-9e47-9657b3a62f22",
+   "id": "71fbc11a-6d03-400e-84fb-48af861c2ca9",
    "metadata": {},
    "source": [
-    "For these tests, I'll use the same dataframe from the variant filtering notebook"
+    "Below contains some simulated data from Jesse\n",
+    "* One simulation where we have the same variants for each conecntration\n",
+    "* One simulation where we do not have the same variants for each concentration\n",
+    "* These two situations hare handeled differently in `polyclonal` objects"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "afd7cf35-212f-4bfb-9abd-623fc4e98d97",
+   "id": "a212ce8e-b374-4cbb-9bd1-e6543972b4e6",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>barcode</th>\n",
-       "      <th>aa_substitutions</th>\n",
-       "      <th>concentration</th>\n",
-       "      <th>prob_escape</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>var1</td>\n",
-       "      <td></td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>var2</td>\n",
-       "      <td>M1A</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>var3</td>\n",
-       "      <td>M1A G2A</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>var4</td>\n",
-       "      <td>M1A G2C</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>var5</td>\n",
-       "      <td>G2A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>var6</td>\n",
-       "      <td>M1A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>var7</td>\n",
-       "      <td>M1L</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  barcode aa_substitutions  concentration  prob_escape\n",
-       "0    var1                             0.5          0.1\n",
-       "1    var2              M1A            0.5          0.2\n",
-       "2    var3          M1A G2A            0.5          0.3\n",
-       "3    var4          M1A G2C            0.5          0.4\n",
-       "4    var5              G2A            1.0          0.5\n",
-       "5    var6              M1A            1.0          0.6\n",
-       "6    var7              M1L            1.0          0.3"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_df = pd.DataFrame.from_records([\n",
-    "            ('var1', '', 0.5, 0.1),\n",
-    "            ('var2', 'M1A', 0.5, 0.2),\n",
-    "            ('var3', 'M1A G2A', 0.5, 0.3),\n",
-    "            ('var4', 'M1A G2C', 0.5, 0.4),\n",
-    "            ('var5', 'G2A', 1, 0.5),\n",
-    "            ('var6', 'M1A', 1, 0.6),\n",
-    "            ('var7', 'M1L', 1, 0.3)\n",
-    "            ],\n",
-    "            columns=['barcode', 'aa_substitutions', 'concentration', 'prob_escape'])\n",
-    "train_df"
+    "activity_wt_df = pd.DataFrame({'epitope':  ['e1', 'e2'],\n",
+    "                               'activity': [ 2.0,  1.0]})\n",
+    "\n",
+    "mut_escape_df = pd.DataFrame({\n",
+    "       'mutation': ['M1C', 'M1C', 'G2A', 'G2A', 'A4K', 'A4K', 'A4L', 'A4L'],\n",
+    "       'epitope':  [ 'e1',  'e2',  'e1',  'e2',  'e1',  'e2',  'e1',  'e2'],\n",
+    "       'escape':   [  2.0,   0.0,   3.0,   0.0,  0.0,    2.5,   0.0,   1.5],\n",
+    "       })\n",
+    "\n",
+    "polyclonal_sim = Polyclonal(activity_wt_df=activity_wt_df,\n",
+    "                            mut_escape_df=mut_escape_df)\n",
+    "\n",
+    "variants_df = pd.DataFrame.from_records(\n",
+    "         [('AA', ''),\n",
+    "          ('AC', 'M1C'),\n",
+    "          ('AG', 'G2A'),\n",
+    "          ('AT', 'A4K'),\n",
+    "          ('TA', 'A4L'),\n",
+    "          ('CA', 'M1C G2A'),\n",
+    "          ('CG', 'M1C A4K'),\n",
+    "          ('CC', 'G2A A4K'),\n",
+    "          ('TC', 'G2A A4L'),\n",
+    "          ('CT', 'M1C G2A A4K'),\n",
+    "          ('TG', 'M1C G2A A4L'),\n",
+    "          ('GA', 'M1C'),\n",
+    "          ],\n",
+    "         columns=['barcode', 'aa_substitutions'])\n",
+    "\n",
+    "escape_probs = polyclonal_sim.prob_escape(variants_df=variants_df,\n",
+    "                                          concentrations=[1.0, 2.0, 4.0])\n",
+    "\n",
+    "data_to_fit = (\n",
+    "         escape_probs\n",
+    "         .rename(columns={'predicted_prob_escape': 'prob_escape'})\n",
+    "         )\n",
+    "\n",
+    "polyclonal_data = Polyclonal(data_to_fit=data_to_fit,\n",
+    "                             activity_wt_df=activity_wt_df,\n",
+    "                             site_escape_df=pd.DataFrame.from_records(\n",
+    "                                    [('e1', 1, 1.0), ('e1', 4, 0.0),\n",
+    "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
+    "                                    columns=['epitope', 'site', 'escape']),\n",
+    "                             data_mut_escape_overlap='fill_to_data',\n",
+    "                             )\n",
+    "\n",
+    "# Now only use the first 30 elements to get rid of some mutations \n",
+    "polyclonal_data2 = Polyclonal(data_to_fit=data_to_fit.head(30),\n",
+    "                             activity_wt_df=activity_wt_df,\n",
+    "                             site_escape_df=pd.DataFrame.from_records(\n",
+    "                                    [('e1', 1, 1.0), ('e1', 4, 0.0),\n",
+    "                                     ('e2', 1, 0.0), ('e2', 4, 2.0)],\n",
+    "                                    columns=['epitope', 'site', 'escape']),\n",
+    "                             data_mut_escape_overlap='fill_to_data',\n",
+    "                             )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0ef1adb5-c164-46f6-9452-3c633944a6e7",
+   "id": "f550d59f-94a5-4868-a36d-ea5852dc9b99",
    "metadata": {},
    "source": [
-    "We want to bootstrap each concentration seperately -- so we should get four samples from `concentration=0.5` and `concentration=1` in all bootstraps"
+    "#### Test basic functionality of helper methods outside of class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "92bbd70f-51c1-4e85-b571-d2e51d9aa0af",
+   "id": "a92c97a0-6447-4655-bdd6-49301f98f11b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>barcode</th>\n",
-       "      <th>aa_substitutions</th>\n",
-       "      <th>concentration</th>\n",
-       "      <th>prob_escape</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>var4</td>\n",
-       "      <td>M1A G2C</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>var4</td>\n",
-       "      <td>M1A G2C</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>var4</td>\n",
-       "      <td>M1A G2C</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>var4</td>\n",
-       "      <td>M1A G2C</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>var7</td>\n",
-       "      <td>M1L</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>var6</td>\n",
-       "      <td>M1A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>var6</td>\n",
-       "      <td>M1A</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.6</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  barcode aa_substitutions  concentration  prob_escape\n",
-       "3    var4          M1A G2C            0.5          0.4\n",
-       "3    var4          M1A G2C            0.5          0.4\n",
-       "3    var4          M1A G2C            0.5          0.4\n",
-       "3    var4          M1A G2C            0.5          0.4\n",
-       "6    var7              M1L            1.0          0.3\n",
-       "5    var6              M1A            1.0          0.6\n",
-       "5    var6              M1A            1.0          0.6"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "boot_df = boot.create_bootstrap_sample(train_df)\n",
-    "boot_df"
+    "boot_df = boot.create_bootstrap_sample(data_to_fit)\n",
+    "\n",
+    "# Make sure we got an appropriate number of samples\n",
+    "assert len(boot_df) == len(data_to_fit)\n",
+    "# Make sure we did sample with replacement\n",
+    "assert not len(boot_df.drop_duplicates()) == len(data_to_fit)\n",
+    "# Make sure we sampled the same number of variants at each concentration as the orignal dataset has\n",
+    "assert boot_df.concentration.value_counts().equals(data_to_fit.concentration.value_counts())"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e7440d35-dcba-490a-b771-7bcd48c25a39",
+   "id": "36684a04-2190-444d-94d2-7c3ce0296591",
    "metadata": {},
    "source": [
-    "Now we test to make sure we have:\n",
-    "* The same number of rows in the bootstrapped dataset\n",
-    "* The same number of observations for each concentration in the bootsrapped dataset"
+    "#### Test initialization of `PolyclonalCollection` objects"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa328205-0b28-420f-9976-2f6c3d28249f",
+   "id": "04a1937a-9241-4f24-91c5-b5513e042002",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(train_df) == len(boot_df)\n",
-    "assert boot_df.value_counts('concentration').equals(train_df.value_counts('concentration'))"
+    "n_samps = 3\n",
+    "pc = PolyclonalCollection(root_polyclonal=polyclonal_data, n_samples=n_samps)\n",
+    "\n",
+    "# Make sure the desired number of models were created and stored\n",
+    "assert len(pc.models) == n_samps\n",
+    "# Make sure attributes are stored properly\n",
+    "assert pc.n_samples == n_samps\n",
+    "# Make sure we aren't copying the actual data from the original polyclonal model\n",
+    "for i in range(n_samps):\n",
+    "    assert not pc.root_polyclonal.data_to_fit.equals(pc.models[i].data_to_fit)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0adc44a4-87bc-4691-bb95-b42e7eb2ddb4",
+   "id": "3c12622f-ee54-428b-8e54-7550c0b5d75c",
    "metadata": {},
    "source": [
-    "Here, we do a quick test when `group_by_col` is set to null -- the whole dataset should be bootstrapped:"
+    "#### Test `PolyclonalCollection` results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "94470c33-491e-4f36-a1e0-6380a958633b",
+   "id": "c6185dc5-6d1a-4975-92b2-5cd7fd6c6b58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# Optimization FAILED at Tue Jan 11 14:24:57 2022.\n",
+      "# Optimization FAILED at Tue Jan 11 14:24:58 2022.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test to ensure that parameters change during fitting.\n",
+    "for model in pc.models:\n",
+    "    old_params = model._params\n",
+    "    boot._fit_polyclonal_model(model)\n",
+    "    # Did the params change?\n",
+    "    assert not np.array_equal(model._params, old_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "7ec43240-d74a-49d8-97e4-1e45e45923df",
    "metadata": {},
    "outputs": [],
    "source": [
-    "assert len(train_df) == len(boot.create_bootstrap_sample(train_df, group_by_col=None))"
+    "test_list = pc.make_predictions(variants_df=boot_df)\n",
+    "# This funciton seems to work at generating a proper list of dataframes \n",
+    "# TODO: However, we need to do something about failed optimizations -- should we discard models that fail?\n",
+    "# Make sure we get the same number of predictions for every model\n",
+    "for result in test_list:\n",
+    "    assert len(result) == len(boot_df)\n",
+    "    assert not (result.shape[1]) == (boot_df.shape[1])"
    ]
   }
  ],
