set seed for fitting (and adjust tests for correlation fix)

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -17,6 +17,8 @@
    "source": [
     "import numpy\n",
     "\n",
+    "import random\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "from polyclonal import Polyclonal\n",
@@ -83,12 +85,10 @@
    "outputs": [],
    "source": [
     "n_eps = 2\n",
-    "poly_one = Polyclonal(\n",
-    "    data_to_fit=data_to_fit, n_epitopes=n_eps, activity_wt_df=None, site_escape_df=None\n",
-    ")\n",
-    "poly_two = Polyclonal(\n",
-    "    data_to_fit=data_to_fit, n_epitopes=n_eps, activity_wt_df=None, site_escape_df=None\n",
-    ")"
+    "poly_one = Polyclonal(data_to_fit=data_to_fit, n_epitopes=n_eps, \n",
+    "                      activity_wt_df=None, site_escape_df=None)\n",
+    "poly_two = Polyclonal(data_to_fit=data_to_fit, n_epitopes=n_eps, \n",
+    "                      activity_wt_df=None, site_escape_df=None)"
    ]
   },
   {
@@ -100,20 +100,20 @@
     {
      "data": {
       "text/plain": [
-       "      fun: 0.24192944194732435\n",
+       "      fun: 0.2419293641053542\n",
        " hess_inv: <12x12 LbfgsInvHessProduct with dtype=float64>\n",
-       "      jac: array([-9.08877936e-05, -1.27143416e-04,  4.73089172e-06, -1.19844310e-04,\n",
-       "        3.33690754e-05, -8.13022139e-05, -2.02361302e-05,  1.33762078e-04,\n",
-       "       -2.00338332e-05, -3.53371508e-05, -1.58083233e-04,  4.63892809e-05])\n",
+       "      jac: array([-4.06262290e-05,  3.01164680e-05,  2.53243944e-06,  9.46372400e-06,\n",
+       "        6.41968602e-05,  1.07553924e-04,  4.11875285e-05,  7.55580460e-05,\n",
+       "        2.39331231e-05,  8.96885272e-05,  1.89380327e-05,  5.22453826e-05])\n",
        "  message: 'CONVERGENCE: REL_REDUCTION_OF_F_<=_FACTR*EPSMCH'\n",
-       "     nfev: 46\n",
-       "      nit: 42\n",
-       "     njev: 46\n",
+       "     nfev: 81\n",
+       "      nit: 68\n",
+       "     njev: 81\n",
        "   status: 0\n",
        "  success: True\n",
-       "        x: array([ 1.15422388,  2.00946277,  0.15252034,  2.06564273,  0.04236974,\n",
-       "        3.22617016,  2.35803862,  0.01179742,  1.51374518, -0.06117452,\n",
-       "        3.03625314,  0.07646585])"
+       "        x: array([ 1.15389091,  2.01172371,  0.15216369,  2.06724838,  0.04200508,\n",
+       "        3.22775792,  2.3581837 ,  0.01236656,  1.51382544, -0.06036563,\n",
+       "        3.03648058,  0.07705838])"
       ]
      },
      "execution_count": 3,
@@ -122,8 +122,9 @@
     }
    ],
    "source": [
-    "poly_one.fit()\n",
-    "poly_two.fit()"
+    "random.seed(1)\n",
+    "poly_one.fit(fit_site_level_first=False)\n",
+    "poly_two.fit(fit_site_level_first=False)"
    ]
   },
   {
@@ -185,13 +186,13 @@
        "      <th>1</th>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.760967</td>\n",
+       "      <td>-0.872404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.760967</td>\n",
+       "      <td>-0.872404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -206,8 +207,8 @@
       "text/plain": [
        "  ref_epitope self_epitope        r2\n",
        "0           1            1  1.000000\n",
-       "1           1            2  0.760967\n",
-       "2           2            1  0.760967\n",
+       "1           1            2 -0.872404\n",
+       "2           2            1 -0.872404\n",
        "3           2            2  1.000000"
       ]
      },
@@ -218,8 +219,8 @@
    ],
    "source": [
     "corr_df = poly_two._make_correlation_matrix(poly_one)\n",
-    "assert len(corr_df) == n_eps ** 2\n",
-    "assert corr_df.r2.between(0, 1).all()\n",
+    "assert len(corr_df) == n_eps**2\n",
+    "assert corr_df.r2.between(-1,1).all()\n",
     "corr_df"
    ]
   },
@@ -231,7 +232,8 @@
    "outputs": [],
    "source": [
     "# This dataframe should return the following mapping matrix:\n",
-    "true_map = numpy.array([[1, 0], [0, 1]])\n",
+    "true_map = numpy.array([[1, 0], \n",
+    "                        [0, 1]])\n",
     "test_map = poly_two._create_mapping_matrix(corr_df)\n",
     "assert numpy.array_equal(true_map, test_map)"
    ]
@@ -254,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/zthornto/opt/anaconda3/lib/python3.8/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
+      "/Users/zthornto/opt/anaconda3/envs/polyclonal/lib/python3.10/site-packages/pandas/core/indexing.py:1732: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -271,12 +273,12 @@
     "two_df.escape.iloc[0:5] = one_df.escape.iloc[5:10]\n",
     "\n",
     "# Create polyclonal objects (can't seem to edit `mut_escape_df` bc it's a property)\n",
-    "original_poly = Polyclonal(\n",
-    "    mut_escape_df=one_df, activity_wt_df=poly_one.activity_wt_df, data_to_fit=None\n",
-    ")\n",
-    "flipped_poly = Polyclonal(\n",
-    "    mut_escape_df=two_df, activity_wt_df=poly_two.activity_wt_df, data_to_fit=None\n",
-    ")"
+    "original_poly = Polyclonal(mut_escape_df=one_df, \n",
+    "                           activity_wt_df=poly_one.activity_wt_df, \n",
+    "                           data_to_fit=None)\n",
+    "flipped_poly = Polyclonal(mut_escape_df=two_df, \n",
+    "                          activity_wt_df=poly_two.activity_wt_df,\n",
+    "                          data_to_fit=None)"
    ]
   },
   {
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "816a369a-22e9-4194-8599-fb7f6dbefafe",
    "metadata": {},
    "outputs": [
@@ -324,7 +326,7 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.760967</td>\n",
+       "      <td>-0.872404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -342,7 +344,7 @@
        "      <th>3</th>\n",
        "      <td>2</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.760967</td>\n",
+       "      <td>-0.872404</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -350,21 +352,21 @@
       ],
       "text/plain": [
        "  ref_epitope self_epitope        r2\n",
-       "0           1            1  0.760967\n",
+       "0           1            1 -0.872404\n",
        "1           1            2  1.000000\n",
        "2           2            1  1.000000\n",
-       "3           2            2  0.760967"
+       "3           2            2 -0.872404"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "corr_df2 = flipped_poly._make_correlation_matrix(original_poly)\n",
-    "assert len(corr_df2) == n_eps ** 2\n",
-    "assert corr_df2.r2.between(0, 1).all()\n",
+    "assert len(corr_df2) == n_eps**2\n",
+    "assert corr_df2.r2.between(-1,1).all()\n",
     "corr_df2"
    ]
   },
@@ -375,7 +377,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_map = numpy.array([[0, 1], [1, 0]])\n",
+    "true_map = numpy.array([[0, 1], \n",
+    "                        [1, 0]])\n",
     "test_map = flipped_poly._create_mapping_matrix(corr_df2)\n",
     "assert numpy.array_equal(true_map, test_map)\n",
     "assert numpy.all(test_map.sum(axis=1) == 1)"
@@ -397,7 +400,7 @@
    "outputs": [],
    "source": [
     "# Test make_mapping_dict\n",
-    "true_dict = {\"1\": \"2\", \"2\": \"1\"}\n",
+    "true_dict = {'1':'2', '2':'1'}\n",
     "flipped_poly._make_mapping_dict(test_map, original_poly)\n",
     "assert true_dict == flipped_poly._mapping_dict"
    ]
@@ -414,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "f9b42ab2-a604-4621-8a59-6bff620d4f6c",
    "metadata": {},
    "outputs": [],
@@ -425,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "338a46fd-cbbe-411c-a58c-cac931e3e8c9",
    "metadata": {},
    "outputs": [],
@@ -433,82 +436,13 @@
     "original_poly.harmonize_epitopes_with(flipped_poly)\n",
     "assert original_poly.aligned_mut_escape_df.equals(flipped_poly.mut_escape_df)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "4ac031c1-9027-4c85-978b-f2bd4fe0ed7a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>epitope</th>\n",
-       "      <th>activity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1.154224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2.009463</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  epitope  activity\n",
-       "0       1  1.154224\n",
-       "1       2  2.009463"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "original_poly.activity_wt_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2f1999a-0c73-4491-8cc5-7bb28f2cd40f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "polyclonal",
    "language": "python",
-   "name": "python3"
+   "name": "polyclonal"
   },
   "language_info": {
    "codemirror_mode": {
@@ -520,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
