formatting -- I keep forgetting to do this :/

--- a/tests/test_epitope_harmony.ipynb
+++ b/tests/test_epitope_harmony.ipynb
@@ -85,10 +85,12 @@
    "outputs": [],
    "source": [
     "n_eps = 2\n",
-    "poly_one = Polyclonal(data_to_fit=data_to_fit, n_epitopes=n_eps, \n",
-    "                      activity_wt_df=None, site_escape_df=None)\n",
-    "poly_two = Polyclonal(data_to_fit=data_to_fit, n_epitopes=n_eps, \n",
-    "                      activity_wt_df=None, site_escape_df=None)"
+    "poly_one = Polyclonal(\n",
+    "    data_to_fit=data_to_fit, n_epitopes=n_eps, activity_wt_df=None, site_escape_df=None\n",
+    ")\n",
+    "poly_two = Polyclonal(\n",
+    "    data_to_fit=data_to_fit, n_epitopes=n_eps, activity_wt_df=None, site_escape_df=None\n",
+    ")"
    ]
   },
   {
@@ -127,8 +129,8 @@
    "outputs": [],
    "source": [
     "corr_df = poly_two._make_correlation_matrix(poly_one)\n",
-    "assert len(corr_df) == n_eps**2\n",
-    "assert corr_df.r2.between(-1,1).all()\n",
+    "assert len(corr_df) == n_eps ** 2\n",
+    "assert corr_df.r2.between(-1, 1).all()\n",
     "corr_df"
    ]
   },
@@ -140,8 +142,7 @@
    "outputs": [],
    "source": [
     "# This dataframe should return the following mapping matrix:\n",
-    "true_map = numpy.array([[1, 0], \n",
-    "                        [0, 1]])\n",
+    "true_map = numpy.array([[1, 0], [0, 1]])\n",
     "test_map = poly_two._create_mapping_matrix(corr_df)\n",
     "assert numpy.array_equal(true_map, test_map)"
    ]
@@ -169,12 +170,12 @@
     "two_df.escape.iloc[0:5] = one_df.escape.iloc[5:10]\n",
     "\n",
     "# Create polyclonal objects (can't seem to edit `mut_escape_df` bc it's a property)\n",
-    "original_poly = Polyclonal(mut_escape_df=one_df, \n",
-    "                           activity_wt_df=poly_one.activity_wt_df, \n",
-    "                           data_to_fit=None)\n",
-    "flipped_poly = Polyclonal(mut_escape_df=two_df, \n",
-    "                          activity_wt_df=poly_two.activity_wt_df,\n",
-    "                          data_to_fit=None)"
+    "original_poly = Polyclonal(\n",
+    "    mut_escape_df=one_df, activity_wt_df=poly_one.activity_wt_df, data_to_fit=None\n",
+    ")\n",
+    "flipped_poly = Polyclonal(\n",
+    "    mut_escape_df=two_df, activity_wt_df=poly_two.activity_wt_df, data_to_fit=None\n",
+    ")"
    ]
   },
   {
@@ -193,8 +194,8 @@
    "outputs": [],
    "source": [
     "corr_df2 = flipped_poly._make_correlation_matrix(original_poly)\n",
-    "assert len(corr_df2) == n_eps**2\n",
-    "assert corr_df2.r2.between(-1,1).all()\n",
+    "assert len(corr_df2) == n_eps ** 2\n",
+    "assert corr_df2.r2.between(-1, 1).all()\n",
     "corr_df2"
    ]
   },
@@ -205,8 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "true_map = numpy.array([[0, 1], \n",
-    "                        [1, 0]])\n",
+    "true_map = numpy.array([[0, 1], [1, 0]])\n",
     "test_map = flipped_poly._create_mapping_matrix(corr_df2)\n",
     "assert numpy.array_equal(true_map, test_map)\n",
     "assert numpy.all(test_map.sum(axis=1) == 1)"
@@ -228,7 +228,7 @@
    "outputs": [],
    "source": [
     "# Test make_mapping_dict\n",
-    "true_dict = {'1':'2', '2':'1'}\n",
+    "true_dict = {\"1\": \"2\", \"2\": \"1\"}\n",
     "flipped_poly._make_mapping_dict(test_map, original_poly)\n",
     "assert true_dict == flipped_poly._mapping_dict"
    ]
